<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Main2Activity">

    <item
        android:id="@+id/action_update_main2"
        android:title="@string/action_update"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_my_comments_main2"
        android:title="@string/action_my_comments"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_city_main2"
        android:title="@string/city_change"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logout_main2"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>