<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">



<!--    <item
        android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="100"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_my_comments"
        android:title="@string/action_my_comments"
        android:orderInCategory="100"
        app:showAsAction="never" />





    <item
        android:id="@+id/action_spinner"
        android:title="@string/action_change"
        app:actionViewClass="android.Widget.Spinner"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />



    <!--<item
        android:id="@+id/action_spinner"
        android:title="@string/action_spinner"
        app:actionViewClass="android.Widget.Spinner"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

-->

</menu>
