<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.dada.localityupdate.RegistrationActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/activity_registration_username_hint"
        android:ems="10"
        android:id="@+id/usernameRegistrationActivity"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
         />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/activity_registration_email_hint"
        android:id="@+id/emailRegistrationActivity"
        android:layout_below="@+id/usernameRegistrationActivity"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/activity_registration_password_hint"
        android:id="@+id/passwordRegistrationActivity"
        android:layout_below="@+id/emailRegistrationActivity"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/activity_registration_confirm_password_hint"
        android:id="@+id/confirm_passwordRegistrationActivity"
        android:layout_below="@+id/passwordRegistrationActivity"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_registration_signup_text"
        android:textAllCaps="false"
        android:id="@+id/buttonSignUpRegistrationActivity"
        android:layout_below="@+id/confirm_passwordRegistrationActivity"
        android:layout_marginTop="39dp" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_registration_reset_text"
        android:textAllCaps="false"
        android:id="@+id/buttonResetRegistrationActivity"
        android:layout_below="@+id/buttonSignUpRegistrationActivity"
        android:layout_marginTop="39dp" />



</RelativeLayout>
